# FEUP-PFL-PROJ1

./: DataType.hs  Deriv.hs  Moni.hs  Poli.hs  Prod.hs  README.md  Sum.hs  Vars.hs  cena do show.txt  proj.cabal  projeto.hs
app/: Deriv.hs  Main.hs  Moni.hs  Poli.hs  Prod.hs  Sum.hs  Tree.hs  Vars.hs  projeto.hs  quickCheckScript.hs
app/Test/: QuickCheck.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
tests/: Tests.hs
