cabal-version:      2.4
name:               proj
version:            0.1.0.0
maintainer:
    up202004735@up.pt,
    up202006137@up.pt

author:
    António Ferreira
    Guilherme Almeida

extra-source-files: CHANGELOG.md

executable proj
    main-is:          projeto.hs
    hs-source-dirs:   app
    other-modules:
        Deriv
        Moni
        Poli
        Prod
        Sum
        Vars

    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        quickcheck-instances ^>=0.3
