cabal-version:      2.4
name:               proj
version:            0.1.0.0
maintainer:
    up202004735@up.pt,
    up202006137@up.pt

author:
    António Ferreira
    Guilherme Almeida

extra-source-files: CHANGELOG.md

executable proj
    main-is:          Main.hs
    hs-source-dirs:   app
    other-modules:
        Deriv
        Moni
        Poli
        Prod
        Sum
        Vars
        Tree

    default-language: Haskell2010
    build-depends:
        base ^>=4.16.3.0,
        QuickCheck

test-suite tests
    type:             exitcode-stdio-1.0
    main-is:          Tests.hs
    hs-source-dirs:   tests app
    other-modules:
        Deriv
        Moni
        Poli
        Prod
        Sum
        Vars
        Tree
    default-language: Haskell2010
    -- ghc-options:      -Wall
    build-depends:
        base,
        QuickCheck
